--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,5 @@
-<p>
-  footer works!
-</p>
+<mat-toolbar color="accent">
+  <span class="fill-remaining-space"></span>
+  <span>&copy;大饼饼的小屋</span>
+  <span class="fill-remaining-space"></span>
+</mat-toolbar>
