--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-html, body, app-root, .site {
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+html, body, mat-sidenav-container, app-root, .site {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -13,28 +15,8 @@ html, body, app-root, .site {
 
 main{
     flex: 1;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content:space-around;
-    align-content:space-between;
-    align-items: center
-}
-header{
-    background-color: green
-}
-footer{
-    background-color: gold
 }
 
-main div {
-    width:200px;
-    height: 200px;
-    background-color: cyan;
-    margin:10px
-}
-
-.box{
-    width:300px;
-    height:300px;
+.fill-remaining-space{
+    flex:1 1 auto
 }
