--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,14 +1,31 @@
-<mat-card>
-  <mat-card-title>登陆</mat-card-title>
-  <mat-card-content>
-    <mat-form-field>
+<form action="">
+  <mat-card>
+    <mat-card-title>登陆</mat-card-title>
+    <mat-card-content>
+      <mat-form-field class="full-width">
         <!-- <span matPreffix>wang</span> -->
-      <input matInput type="text" placeholder="Your Email">
-      <!-- <span matSuffix>@gmail.com</span> -->
-    </mat-form-field>
-  </mat-card-content>
-  <mat-card-actions>
-    <p>还没有账户？<a href="">注册</a></p>
-    <p>忘记密码？<a href="">找回</a></p>
-  </mat-card-actions>
-</mat-card>
+        <input matInput type="text" placeholder="Email">
+      </mat-form-field>
+      <mat-form-field class="full-width">
+        <input matInput type="password" placeholder="Password">
+      </mat-form-field>
+      <button mat-raised-button type="button">Login</button>
+    </mat-card-content>
+    <mat-card-actions class="text-right">
+      <p>还没有账户？<a href="">注册</a></p>
+      <p>忘记密码？<a href="">找回</a></p>
+    </mat-card-actions>
+  </mat-card>
+  <mat-card>
+    <mat-card-title>
+      每日佳句
+    </mat-card-title>
+    <mat-card-subtitle>
+      满足感在于不断的努力
+    </mat-card-subtitle>
+    <img mat-card src="/assets/img.jpg" alt="">
+    <mat-card-content>
+      Satisfaction lies in the effort
+    </mat-card-content>
+  </mat-card>
+</form>
