--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <mat-sidenav-container>
-    <mat-sidenav #sidenav mode="side" mode="side">
+    <mat-sidenav #sidenav mode="side" mode="over">
       <app-sidebar>
 
       </app-sidebar>
