toggle dark mode added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<mat-sidenav-container>
+<mat-sidenav-container [class.myapp-dark-theme]="useDarkTheme">
     <mat-sidenav #sidenav mode="side" mode="over">
       <app-sidebar>
 
@@ -7,7 +7,7 @@
     </mat-sidenav>
   <div class="site">
     <header>
-      <app-header (toggle)="sidenav.toggle()"></app-header>
+      <app-header (toggle)="sidenav.toggle()" (toggleDarkTheme)="switchTheme($event)"></app-header>
     </header>
     <main>
       <router-outlet></router-outlet>
