--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="accent">
+<mat-toolbar color="primary">
   <span class="fill-remaining-space"></span>
   <span>&copy;大饼饼的小屋</span>
   <span class="fill-remaining-space"></span>
