--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,4 +3,6 @@
     <mat-icon>menu</mat-icon>
   </button>
   <span>任务管理器</span>
+  <span class="fill-remaining-space"></span>
+  <mat-slide-toggle (change)="onChange($event.checked)">黑夜模式</mat-slide-toggle>
 </mat-toolbar>
