--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -9,7 +9,7 @@
       <mat-form-field class="full-width">
         <input matInput type="password" placeholder="Password">
       </mat-form-field>
-      <button mat-raised-button type="button">Login</button>
+      <button mat-raised-button type="button" color="accent">Login</button>
     </mat-card-content>
     <mat-card-actions class="text-right">
       <p>还没有账户？<a href="">注册</a></p>
