--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
     <span mat-line mat-subheader>按周查看任务</span>
   </mat-list-item>
   <mat-list-item>
-    <mat-icon mat-list-icon svgIcon="day"></mat-icon>
+    <mat-icon mat-list-icon [svgIcon]="today"></mat-icon>
     <span mat-line>日视图</span>
     <span mat-line mat-subheader>按日查看任务</span>
   </mat-list-item>
