--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -16,15 +16,15 @@
       <mat-form-field class="full-width">
         <input matInput type="password" placeholder="Repeat Password">
       </mat-form-field>
-      <mat-grid-list cols="6" rowHeight="1:1">
+      <mat-grid-list cols="6">
         <mat-grid-tile *ngFor="let item of items">
-          <mat-icon [svgIcon]="item"></mat-icon>
+          <mat-icon class="avatar" [svgIcon]="item"></mat-icon>
         </mat-grid-tile>
       </mat-grid-list>
       <button mat-raised-button type="button" color="accent">注册</button>
     </mat-card-content>
     <mat-card-actions class="text-right">
-      <p>还没有账户？<a href="">注册</a></p>
+      <p>已经有账户？<a href="">登陆</a></p>
       <p>忘记密码？<a href="">找回</a></p>
     </mat-card-actions>
   </mat-card>
