component communication with its dialog (two ways)

--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,4 +1,4 @@
-<app-project-item *ngFor="let p of projects" [item]="p" class="project-card">
+<app-project-item *ngFor="let prj of projects" [item]="prj" class="project-card">
 
 </app-project-item>
 
