--- a/src/app/project/new-project/new-project.component.html
+++ b/src/app/project/new-project/new-project.component.html
@@ -1,35 +1,17 @@
 <form action="">
 
   <h2 mat-dialog-title>新建项目</h2>
-  <div mat-dialog-content></div>
+  <div mat-dialog-content>
+    <mat-dialog-actions class="full-width">
+      <input type="text" placeholder="项目名称" matInput>
+    </mat-dialog-actions>
+    <mat-dialog-actions class="full-width">
+      <input type="text" placeholder="项目描述" matInput>
+    </mat-dialog-actions>
+    <div mat-dialog-actions>
+      <button type="button" mat-raised-button color="primary" (click)='onClick()'>保存</button>
+      <button type="button" mat-raised-button mat-dialog-close>关闭</button>
+    </div>
 
-  <mat-card>
-    <mat-card-title>登陆</mat-card-title>
-    <mat-card-content>
-      <mat-form-field class="full-width">
-        <!-- <span matPreffix>wang</span> -->
-        <input matInput type="text" placeholder="Email">
-      </mat-form-field>
-      <mat-form-field class="full-width">
-        <input matInput type="password" placeholder="Password">
-      </mat-form-field>
-      <button mat-raised-button type="button" color="accent">Login</button>
-    </mat-card-content>
-    <mat-card-actions class="text-right">
-      <p>还没有账户？<a [routerLink]="['/register']" routerLinkActive="router-link-active">注册</a></p>
-      <p>忘记密码？<a href="">找回</a></p>
-    </mat-card-actions>
-  </mat-card>
-  <mat-card>
-    <mat-card-title>
-      每日佳句
-    </mat-card-title>
-    <mat-card-subtitle>
-      满足感在于不断的努力
-    </mat-card-subtitle>
-    <img mat-card src="/assets/img.jpg" alt="">
-    <mat-card-content>
-      Satisfaction lies in the effort
-    </mat-card-content>
-  </mat-card>
+  </div>
 </form>
