--- a/src/app/project/invite/invite.component.html
+++ b/src/app/project/invite/invite.component.html
@@ -1,3 +1,19 @@
-<p>
-  invite works!
-</p>
+<form action="">
+
+  <h2 mat-dialog-title>邀请组员</h2>
+  <div mat-dialog-content>
+    <mat-dialog-actions class="full-width">
+      <input type="text" placeholder="姓名" [matAutocomplete]="autoMembers">
+    </mat-dialog-actions>
+    <div mat-dialog-actions>
+      <button type="button" mat-raised-button color="primary">保存</button>
+      <button type="button" mat-raised-button mat-dialog-close>关闭</button>
+    </div>
+  </div>
+</form>
+<!-- 因为传入的是一个函数diaplayUser，而不是一个返回结果，所以没有加括号 -->
+<mat-autocomplete #autoMembers="matAutocomplete" [displayWith]="displayUser">
+  <mat-option *ngFor="let item of items" [value]="item">
+    {{item.name}}
+  </mat-option>
+</mat-autocomplete>
