--- a/src/app/task/task-header/task-header.component.html
+++ b/src/app/task/task-header/task-header.component.html
@@ -9,12 +9,12 @@
     </button>
   </div>
   <div>
-    <button mat-icon-button [matMenuTriggerFor]="menu">
+    <button mat-icon-button [matMenuTriggerFor]="menuaa">
       <mat-icon>keyboard_arrow_down</mat-icon>
     </button>
   </div>
 </div>
-<mat-menu #menu="matMenu">
+<mat-menu #menuaa="matMenu">
   <button mat-menu-item>
     <mat-icon>mode_edit</mat-icon>
     <span>修改列表名称</span>
