--- a/src/app/task/task-item/task-item.component.html
+++ b/src/app/task/task-item/task-item.component.html
@@ -1,3 +1,16 @@
-<p>
-  task-item works!
-</p>
+<mat-list-item class="container"
+[ngClass]="{
+  'priority-normal':item.priority === 3,
+  'priority-important':item.priority === 2,
+  'priority-emergency':item.priority === 1
+  }">
+  <mat-checkbox [checked]="item.completed" class="completion-status"></mat-checkbox>
+  <div class="content" mat-line [ngClass]="{'completed':item.completed}">
+    <span [matTooltip]="item.desc">{{item.desc}}</span>
+  </div>
+  <div class="bottom-bar" mat-line>
+    <span class="due-date" *ngIf="item.dueDate">{{item.dueDate | date:"dd-MM-yy"}}</span>
+    <mat-icon *ngIf="item.reminder" class="alarm">alarm</mat-icon>
+  </div>
+  <mat-icon [svgIcon]="avatar" mat-list-avatar class="avatar"></mat-icon>
+</mat-list-item>
