--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -3,6 +3,7 @@
     <app-task-header 
       [header]="list.name"
       (newTask) = "launchNewTaskDialog()"
+      (moveAll) = "launchCopyTaskkDialog()"
     ></app-task-header>
     <app-task-item *ngFor="let task of list.tasks" [item]="task">
 
