add confirmation dialogs
add confirmation dialogs

--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,4 +1,9 @@
-<app-project-item *ngFor="let prj of projects" [item]="prj" class="project-card" (onInvite)="launchInviteDialog()">
+<app-project-item *ngFor="let prj of projects" 
+  [item]="prj" class="project-card" 
+  (onInvite)="launchInviteDialog()" 
+  (onEdit)="launchUpdateDialog()"
+  (onDelete)="launchConfirmDialog()"
+  >
 
 </app-project-item>
 
