--- a/src/app/task/new-task/new-task.component.html
+++ b/src/app/task/new-task/new-task.component.html
@@ -1,10 +1,10 @@
 <form action="">
 
-  <h2 mat-dialog-title>新建任务</h2>
+  <h2 mat-dialog-title>{{title}}</h2>
   <div mat-dialog-content>
-    <mat-dialog-actions class="full-width">
+    <mat-form-field class="full-width">
       <input type="text" placeholder="任务内容" matInput>
-    </mat-dialog-actions>
+    </mat-form-field>
     <mat-radio-group>
       <mat-radio-button *ngFor="let priority of priorities" [value]="priority.value">
         {{priority.label}}
