--- a/src/app/task/task-header/task-header.component.html
+++ b/src/app/task/task-header/task-header.component.html
@@ -23,7 +23,7 @@
     <mat-icon [svgIcon]="'move'"></mat-icon>
     <span>移动本列表所有内容</span>
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="onDeleteAllClick()">
     <mat-icon>delete_forever</mat-icon>
     <span>删除列表</span>
   </button>
