--- a/src/app/project/new-project/new-project.component.html
+++ b/src/app/project/new-project/new-project.component.html
@@ -1,6 +1,6 @@
 <form action="">
 
-  <h2 mat-dialog-title>新建项目</h2>
+  <h3 mat-dialog-title>{{title}}</h3>
   <div mat-dialog-content>
     <mat-dialog-actions class="full-width">
       <input type="text" placeholder="项目名称" matInput>
