--- a/src/app/task/task-item/task-item.component.html
+++ b/src/app/task/task-item/task-item.component.html
@@ -3,8 +3,11 @@
   'priority-normal':item.priority === 3,
   'priority-important':item.priority === 2,
   'priority-emergency':item.priority === 1
-  }">
-  <mat-checkbox [checked]="item.completed" class="completion-status"></mat-checkbox>
+  }"
+  (click)="onItemClick()"
+  >
+  <mat-checkbox [checked]="item.completed" class="completion-status"
+    (click)="onCheckBoxClick($event)"></mat-checkbox>
   <div class="content" mat-line [ngClass]="{'completed':item.completed}">
     <span [matTooltip]="item.desc">{{item.desc}}</span>
   </div>
