--- a/src/app/task/task-header/task-header.component.html
+++ b/src/app/task/task-header/task-header.component.html
@@ -15,7 +15,7 @@
   </div>
 </div>
 <mat-menu #menuaa="matMenu">
-  <button mat-menu-item>
+  <button mat-menu-item (click)="onEditListClick()">
     <mat-icon>mode_edit</mat-icon>
     <span>修改列表名称</span>
   </button>
