--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <mat-sidenav-container [class.myapp-dark-theme]="useDarkTheme">
     <mat-sidenav #sidenav mode="side" mode="over">
-      <app-sidebar>
+      <app-sidebar (navClick)="sidenav.toggle()">
 
       </app-sidebar>
     </mat-sidenav>
