--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,11 +1,13 @@
-<app-project-item *ngFor="let prj of projects" 
-  [item]="prj" class="project-card" 
-  (onInvite)="launchInviteDialog()" 
-  (onEdit)="launchUpdateDialog()"
-  (onDelete)="launchConfirmDialog()"
-  >
+<div class="container" [@listAnim]="projects.length">
+    <app-project-item *ngFor="let prj of projects" 
+    [item]="prj" class="project-card" 
+    (onInvite)="launchInviteDialog()" 
+    (onEdit)="launchUpdateDialog()"
+    (onDelete)="launchConfirmDialog(prj)"
+    >
+  </app-project-item>
+</div>
 
-</app-project-item>
 
 <button mat-fab class="fab-button" type="button" (click)="openNewProjectDialog()">
   <mat-icon>add</mat-icon>
