--- a/src/app/project/project-list/project-list.component.scss
+++ b/src/app/project/project-list/project-list.component.scss
@@ -4,7 +4,13 @@
     flex: 0 0 360px
 }
 
-:host{
+// :host{
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap
+// }
+
+.container{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap
