drag and drop initialized

--- a/src/app/task/task-item/task-item.component.html
+++ b/src/app/task/task-item/task-item.component.html
@@ -6,6 +6,8 @@
   'priority-important':item.priority === 2,
   'priority-emergency':item.priority === 1
   }"
+  [app-draggable]="true"
+  [draggedClass]="'drag-start'"
   (click)="onItemClick()">
   <mat-checkbox [checked]="item.completed" class="completion-status" (click)="onCheckBoxClick($event)"></mat-checkbox>
   <div class="content" mat-line [ngClass]="{'completed':item.completed}">
