--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -1,5 +1,7 @@
 <div class="tasklists">
-  <app-task-list class="list-container" *ngFor="let list of lists">
+  <app-task-list class="list-container"
+    app-droppable [dragEnterClass]="'drag-enter'"
+    *ngFor="let list of lists">
     <app-task-header [header]="list.name" 
     (newTask)="launchNewTaskDialog()" 
     (moveAll)="launchCopyTaskkDialog()"
