--- a/src/app/task/task-item/task-item.component.html
+++ b/src/app/task/task-item/task-item.component.html
@@ -7,7 +7,9 @@
   'priority-emergency':item.priority === 1
   }"
   [app-draggable]="true"
+  [dragTag]="'task-item'"
   [draggedClass]="'drag-start'"
+  [dragData]="item"
   (click)="onItemClick()">
   <mat-checkbox [checked]="item.completed" class="completion-status" (click)="onCheckBoxClick($event)"></mat-checkbox>
   <div class="content" mat-line [ngClass]="{'completed':item.completed}">
