--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -1,4 +1,5 @@
 <div class="tasklists">
+    <!-- [ngStyle]="{'order': list.order}"中第一个order是利用了flex样式中的order -->
   <app-task-list class="list-container"
     app-droppable [dropTags]="['task-item', 'task-list']" 
     [dragEnterClass]="'drag-enter'" 
@@ -7,6 +8,7 @@
     [draggedClass]="'drag-start'" 
     [dragData]="list" 
     (dropped)="handleMove($event, list)"
+    
     [ngStyle]="{'order': list.order}"
     *ngFor="let list of lists">
     <app-task-header 
@@ -16,6 +18,7 @@
       (deleteAll)="launchConfirmDialog()"
       (editList)="launchEditListDialog()"
     ></app-task-header>
+    <app-quick-task (quickTask)="handleQuickTask($event)"></app-quick-task>
     <app-task-item *ngFor="let task of list.tasks" [item]="task" (taskClick)="launchUpdateTaskDialog(task)">
 
     </app-task-item>
