--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,18 +1,19 @@
-<form action="">
+<form [formGroup]="form" (ngSubmit)="onSubmit(form, $event)">
   <mat-card>
     <mat-card-title>登陆</mat-card-title>
     <mat-card-content>
       <mat-form-field class="full-width">
         <!-- <span matPreffix>wang</span> -->
-        <input matInput type="text" placeholder="Email">
+        <input matInput type="text" placeholder="Email" formControlName="email">
+        <mat-error>{{form.controls['email'].errors | json}}</mat-error>
       </mat-form-field>
       <mat-form-field class="full-width">
-        <input matInput type="password" placeholder="Password">
+        <input matInput type="password" placeholder="Password" formControlName="pwd">
       </mat-form-field>
-      <button mat-raised-button type="button" color="accent">Login</button>
+      <button mat-raised-button type="submit" color="primary" [disabled]="!form.valid">Login</button>
     </mat-card-content>
     <mat-card-actions class="text-right">
-      <p>还没有账户？<a [routerLink]="['/register']" routerLinkActive="router-link-active" >注册</a></p>
+      <p>还没有账户？<a [routerLink]="['/register']" routerLinkActive="router-link-active">注册</a></p>
       <p>忘记密码？<a href="">找回</a></p>
     </mat-card-actions>
   </mat-card>
