--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -1,27 +1,30 @@
-<form action="">
+<form [formGroup]="form" (ngSubmit)="onSubmit(form, $event)">
   <mat-card>
     <mat-card-title>注册</mat-card-title>
     <mat-card-content>
       <mat-form-field class="full-width">
         <!-- <span matPreffix>wang</span> -->
-        <input matInput type="text" placeholder="Email">
+        <input matInput type="text" placeholder="Email" formControlName="email">
       </mat-form-field>
       <mat-form-field class="full-width">
         <!-- <span matPreffix>wang</span> -->
-        <input matInput type="text" placeholder="姓名">
+        <input matInput type="text" placeholder="姓名" formControlName="name">
       </mat-form-field>
       <mat-form-field class="full-width">
-        <input matInput type="password" placeholder="Password">
+        <input matInput type="password" placeholder="Password" formControlName="pwd">
       </mat-form-field>
       <mat-form-field class="full-width">
-        <input matInput type="password" placeholder="Repeat Password">
+        <input matInput type="password" placeholder="Repeat Password" formControlName="repeat">
       </mat-form-field>
-      <mat-grid-list cols="6">
-        <mat-grid-tile *ngFor="let item of items">
-          <mat-icon class="avatar" [svgIcon]="item"></mat-icon>
-        </mat-grid-tile>
-      </mat-grid-list>
-      <button mat-raised-button type="button" color="accent">注册</button>
+      <app-image-list-select
+        [useSvgIcon]="true"
+        [cols] = "6"
+        [title]="'选择头像：'"
+        [items]="items"
+        formControlName="avatar"
+      >
+      </app-image-list-select>
+      <button mat-raised-button type="submit" color="accent">注册</button>
     </mat-card-content>
     <mat-card-actions class="text-right">
       <p>已经有账户？<a href="">登陆</a></p>
